--- a/rand/main/templates/main/index.html
+++ b/rand/main/templates/main/index.html
@@ -1,10 +1,16 @@
 MAIN PAGE <br> <br>
 
+<a href="{% url 'random' %}">
+    <input type="button" value="RANDOM">
+</a> <br> <br>
+
 <a href="{% url 'user_list' %}">
     <input type="button" value="LIST">
 </a> <br> <br>
 
-
+<a href="{% url 'add_topic' %}">
+    <input type="button" value="ADD TOPIC">
+</a> <br> <br>
 
 <a href="{% url 'user_logout' %}">
     <input type="button" value="LOGOUT">
