--- a/rand/main/templates/main/index.html
+++ b/rand/main/templates/main/index.html
@@ -1,4 +1,4 @@
-MAIN PAGE <br> <br>
+RAND <br> <br> <br>
 
 <a href="{% url 'random' %}">
     <input type="button" value="RANDOM">
@@ -10,6 +10,10 @@ MAIN PAGE <br> <br>
 
 <a href="{% url 'add_topic' %}">
     <input type="button" value="ADD TOPIC">
+</a> <br> <br> <br>
+
+<a href="{% url 'settings' %}">
+    <input type="button" value="SETTINGS">
 </a> <br> <br>
 
 <a href="{% url 'user_logout' %}">
