--- a/rand/main/templates/main/topic_info.html
+++ b/rand/main/templates/main/topic_info.html
@@ -1,3 +1,5 @@
+TOPIC <br> <br> <br>
+
 {{ topic.title }} <br> <br>
 
 {% if topic.subtitle %}
@@ -12,9 +14,9 @@
     {{ topic.link }} <br> <br>
 {% endif %}
 
-Date Created: {{ topic.date_created }} <br> <br>
-Date Updated: {{ topic.date_updated }} <br> <br>
-Date Watched: {{ topic.date_watched }} <br> <br>
+Created -- {{ topic.date_created }} <br> <br>
+Updated -- {{ topic.date_updated }} <br> <br>
+Watched -- {{ topic.date_watched }} <br> <br>
 
 <a href="{% url 'edit_topic' id=topic.id %}">
     <input type="button" value="EDIT">
@@ -22,7 +24,7 @@ Date Watched: {{ topic.date_watched }} <br> <br>
 
 <a href="{% url 'confirm_delete_topic' id=topic.id %}">
     <input type="button" value="DELETE">
-</a> <br> <br>
+</a> <br> <br> <br>
 
 <a href="{% url 'index' %}">
     <input type="button" value="HOME">
