--- a/rand/main/templates/main/confirm_delete.html
+++ b/rand/main/templates/main/confirm_delete.html
@@ -12,11 +12,11 @@ TOPIC <br> <br> <br>
 
 {% if topic.link %}
     {{ topic.link }} <br> <br>
-{% endif %}
+{% endif %} <br>
 
-Date Created: {{ topic.date_created }} <br> <br>
-Date Updated: {{ topic.date_updated }} <br> <br>
-Date Watched: {{ topic.date_watched }} <br> <br>
+Created -- {{ topic.date_created }} <br> <br>
+Updated -- {{ topic.date_updated }} <br> <br>
+Watched -- {{ topic.date_watched }} <br> <br> <br>
 
 <a href="{% url 'edit_topic' id=topic.id %}">
     <input type="button" value="EDIT">
@@ -29,7 +29,7 @@ Are you sure?
 
 <a href="{% url 'topic_info' id=topic.id %}">
     <input type="button" value="NO">
-</a> <br> <br>
+</a> <br> <br> <br>
 
 <a href="{% url 'index' %}">
     <input type="button" value="HOME">
