Use request.path variable in user_list template
Changed {% url 'user_list' %} to {{ request.path }} in pagination block

--- a/rand/main/templates/main/confirm_delete.html
+++ b/rand/main/templates/main/confirm_delete.html
@@ -27,7 +27,7 @@ Are you sure?
     <input type="button" value="YES">
 </a>
 
-<a href="{% url 'topic_info' id=topic.id %}">
+<a href="{{ topic.get_absolute_url }}">
     <input type="button" value="NO">
 </a> <br> <br> <br>
 
