--- a/rand/main/templates/main/edit_topic.html
+++ b/rand/main/templates/main/edit_topic.html
@@ -9,7 +9,7 @@ EDIT TOPIC <br> <br> <br>
   {{ form.link }} <br> <br>
 
   <input type="submit" value="SAVE"> <br> <br>
-  <a href="{% url 'topic_info' id=id %}">
+  <a href="{{ topic.get_absolute_url }}">
     <input type="button" value="BACK">
   </a> <br> <br>
   <a href="{% url 'index' %}">
