--- a/rand/main/templates/main/index.html
+++ b/rand/main/templates/main/index.html
@@ -16,6 +16,6 @@ RAND <br> <br> <br>
     <input type="button" value="SETTINGS">
 </a> <br> <br>
 
-<a href="{% url 'user_logout' %}">
+<a href="{% url 'logout' %}">
     <input type="button" value="LOGOUT">
 </a>
