Add email field in SignUpForm

--- a/rand/main/templates/registration/login.html
+++ b/rand/main/templates/registration/login.html
@@ -25,9 +25,9 @@ LOGIN <br> <br> <br>
     <input type="submit" value="LOGIN"> <br> <br> <br>
     <input type="hidden" name="next" value="{{ next }}">
 
-    <a href="{% url 'user_signup' %}">
+    <a href="{% url 'signup' %}">
         <input type="button" value="NO ACCOUNT YET?">
-    </a> <br>
+    </a> <br> <br>
 
     <a href="{% url 'password_reset' %}">
         <input type="button" value="LOST PASSWORD?">
