--- a/rand/main/templates/registration/signup.html
+++ b/rand/main/templates/registration/signup.html
@@ -4,11 +4,12 @@ SIGNUP <br> <br> <br>
     {% csrf_token %}
 
     {{ form.username }} <br> <br>
+    {{ form.email }} <br> <br>
     {{ form.password }} <br> <br>
     {{ form.password_check }} <br> <br>
 
     <input type="submit" value="SIGNUP"> <br> <br> <br>
-    <a href="{% url 'user_login' %}">
+    <a href="{% url 'login' %}">
         <input type="button" value="BACK TO LOGIN">
     </a>
 </form>
