Add password reset

--- a/rand/main/templates/registration/password_reset_confirm.html
+++ b/rand/main/templates/registration/password_reset_confirm.html
@@ -4,6 +4,21 @@
     <form method="POST">
         {% csrf_token %}
 
+        {{ form.new_password1.errors }} <br> <br>
 
+        NEW PASSWORD: <br>
+        {{ form.new_password1 }} <br> <br>
+
+        {{ form.new_password2.errors }} <br> <br>
+
+        REPEAT PASSWORD: <br>
+        {{ form.new_password2 }} <br> <br>
+
+        <input type="submit" value="CHANGE">
     </form>
+{% else %}
+    PASSWORD RESET FAILED <br> <br>
+
+    The password reset link was invalid, possibly bacause it has already used. <br>
+    Please request a new password reset.
 {% endif %}
