--- a/rand/main/templates/main/user_list.html
+++ b/rand/main/templates/main/user_list.html
@@ -16,44 +16,28 @@ LIST <br> <br> <br>
 
 SORT: &nbsp
 
-{% if search %}
-    <a href="?search={{ search }}&sort=title">
-{% else %}
-    <a href="?sort=title">
-{% endif %}
+<a href="?{{ query_string }}&sort=title">
     <input type="button" value="TITLE">
 </a>
 
-{% if search %}
-    <a href="?search={{ search }}&sort=-title">
-{% else %}
-    <a href="?sort=-title">
-{% endif %}
+<a href="?{{ query_string }}&sort=-title">
     <input type="button" value="-TITLE">
 </a>
 
-{% if search %}
-    <a href="?search={{ search }}&sort=date_created">
-{% else %}
-    <a href="?sort=date_created">
-{% endif %}
+<a href="?{{ query_string }}&sort=date_created">
     <input type="button" value="DATE">
 </a>
 
-{% if search %}
-    <a href="?search={{ search }}&sort=-date_created">
-{% else %}
-    <a href="?sort=-date_created">
-{% endif %}
+<a href="?{{ query_string }}&sort=-date_created">
     <input type="button" value="-DATE">
 </a> <br> <br> <br>
 
 {% if action %}
-    <a href="?action=">
+    <a href="?{{ query_string }}&action=">
         <input type="button" value="CANCEL EDITING"> <br> <br>
     </a>
 {% else %}
-    <a href="?action=edit">
+    <a href="?{{ query_string }}&action=edit">
         <input type="button" value="EDIT LIST"> <br> <br>
     </a>
 {% endif %}
@@ -61,21 +45,13 @@ SORT: &nbsp
 
 {% if is_paginated %}
     {% for page in paginator.page_range %}
-        {% if search %}
-            <a href="{{ request.path }}?page={{ page }}&search={{ search }}&sort={{ sort_order }}">
-        {% else %}
-            <a href="{{ request.path }}?page={{ page }}&sort={{ sort_order }}">
-        {% endif %}
+        <a href="?{{ query_string }}&page={{ page }}">
             <input type="button" value="{{ page }}">
         </a>
     {% endfor %}
 
     {% if page_obj.has_previous %}
-        {% if search %}
-            <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}&search={{ search }}&sort={{ sort_order }}">
-        {% else %}
-            <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}&&sort={{ sort_order }}">
-        {% endif %}
+        <a href="?{{ query_string }}&page={{ page_obj.previous_page_number }}">
             <input type="button" value="PREVIOUS">
         </a>
 
@@ -85,11 +61,7 @@ SORT: &nbsp
     {% endif %}
 
     {% if page_obj.has_next %}
-        {% if search %}
-            <a href="{{ request.path }}?page={{ page_obj.next_page_number }}&search={{ search }}&sort={{ sort_order }}">
-        {% else %}
-            <a href="{{ request.path }}?page={{ page_obj.next_page_number }}&sort={{ sort_order }}">
-        {% endif %}
+        <a href="?{{ query_string }}&page={{ page_obj.next_page_number }}">
             <input type="button" value="NEXT"> <br> <br> <br>
         </a>
     {% endif %}
