--- a/rand/main/templates/main/index.html
+++ b/rand/main/templates/main/index.html
@@ -5,7 +5,7 @@ RAND <br> <br> <br>
 </a> <br> <br>
 
 <a href="{% url 'user_list' %}">
-    <input type="button" value="LIST">
+    <input type="button" value="LIST OF {{ topics_count }} TOPICS">
 </a> <br> <br>
 
 <a href="{% url 'add_topic' %}">
