--- a/rand/main/templates/main/settings.html
+++ b/rand/main/templates/main/settings.html
@@ -4,6 +4,10 @@ SETTINGS - {{ user }} <br> <br> <br>
     <input type="button" value="CHANGE USERNAME">
 </a> <br> <br>
 
+<a href="{% url 'topics_per_page' %}">
+    <input type="button" value="TOPICS PER PAGE">
+</a> <br> <br>
+
 <a href="{% url 'confirm_delete_profile' %}">
     <input type="button" value="DELETE PROFILE">
 </a> <br> <br> <br>
